// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`price-bluna successful calls return success when fetching the USD/BLuna price 1`] = `
Object {
  "data": Object {
    "result": "69240497534091154572",
  },
  "jobRunID": "1",
  "result": "69240497534091154572",
  "statusCode": 200,
}
`;

exports[`price-bluna successful calls returns success when fetching the BTC/BLuna price 1`] = `
Object {
  "data": Object {
    "result": "1223200677208973",
  },
  "jobRunID": "1",
  "result": "1223200677208973",
  "statusCode": 200,
}
`;

exports[`price-bluna successful calls returns success when fetching the ETH/BLuna price 1`] = `
Object {
  "data": Object {
    "result": "15256184292256320",
  },
  "jobRunID": "1",
  "result": "15256184292256320",
  "statusCode": 200,
}
`;
